# mitm_chrome

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
mitm_chrome/: __init__.py  __main__.py
