[tool.poetry]
name = "mitm_chrome"
version = "0.1.2"
description = "Integrate chrome with mitmproxy."
license = "MIT"
authors = ["林玮 (Jade Lin) <linw1995@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/linw1995/mitm_chrome"
repository = "https://github.com/linw1995/mitm_chrome"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
mitm_chrome = 'mitm_chrome:cli'

[tool.poetry.dependencies]
python = "^3.9"
mitmproxy = "^6"

[tool.poetry.dev-dependencies]
flake8-bugbear = "^20.11.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.2"
version_files = ["pyproject.toml:version"]
tag_format = "$version"

[tool.isort]
profile='black'

import_heading_stdlib='Standard Library'
import_heading_thirdparty='Third Party Library'
import_heading_firstparty='First Party Library'
import_heading_localfolder='Local Folder'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
